RESOLVED FIXED 244180
HTMLDetailsElement should use WeakPtrs instead of raw pointers.
https://bugs.webkit.org/show_bug.cgi?id=244180
Summary HTMLDetailsElement should use WeakPtrs instead of raw pointers.
Ryosuke Niwa
Reported 2022-08-21 20:38:07 PDT
Don't use raw pointers in HTMLDetailsElement.
Attachments
Ryosuke Niwa
Comment 1 2022-08-21 20:42:00 PDT
EWS
Comment 2 2022-08-22 11:32:38 PDT
Committed 253653@main (e0aca2158f11): <https://commits.webkit.org/253653@main> Reviewed commits have been landed. Closing PR #3521 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-22 11:33:16 PDT
Note You need to log in before you can comment on or make changes to this bug.