HTMLDetailsElement should use WeakPtrs instead of raw pointers. https://bugs.webkit.org/show_bug.cgi?id=244180

Reviewed by Youenn Fablet.

* Source/WebCore/html/HTMLDetailsElement.cpp:
(WebCore::HTMLDetailsElement::didAddUserAgentShadowRoot):
* Source/WebCore/html/HTMLDetailsElement.h:

Canonical link: https://commits.webkit.org/253653@main